[package]
name = "forget"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
async-trait = "0.1"
directories = "5"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
unicode-width = "0.2.2"
pulldown-cmark = "0.13.4"
textwrap = "0.16.2"
